--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,7 @@ html {
 
 body {
   font-family: 'Montserrat', Arial, Verdana;
+  /* flex-direction: row; */
 }
 
 .profile{
@@ -37,6 +38,7 @@ body {
 
 /*form styles*/
 #msform {
+  flex-wrap: nowrap;
   width: 1000px;
   margin: 50px auto;
   text-align: center;
@@ -44,6 +46,7 @@ body {
 }
 
 #msform fieldset {
+  /* flex-wrap: wrap; */
   background: white;
   border: none;
   border-radius: 3px;
@@ -123,7 +126,7 @@ body {
   color: white;
   text-transform: uppercase;
   font-size: 9px;
-  width: 33.33%;
+  width: 16.6%;
   float: left;
   position: relative;
 } 
