--- a/src/App.css
+++ b/src/App.css
@@ -8,10 +8,16 @@
 }
 
 html {
-  height: 100%;
+  height: auto;
   /*Image only BG fallback*/
   /*background = gradient + image pattern combo*/
   background: linear-gradient(#B4C4DB,#164A8F,#B31F25);
+}
+
+.tickmark{
+  width: 500px;
+  height: 500px;
+  padding-right: 10px;
 }
 
 .headerLogo{
